--- a/Demo Storyboard/LGSideMenuControllerDemo/Base.lproj/Main.storyboard
+++ b/Demo Storyboard/LGSideMenuControllerDemo/Base.lproj/Main.storyboard
@@ -150,7 +150,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image3.png" translatesAutoresizingMaskIntoConstraints="NO" id="GoA-rv-Fkj">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image3" translatesAutoresizingMaskIntoConstraints="NO" id="GoA-rv-Fkj">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z2q-EA-ea6">
@@ -184,12 +184,12 @@
                     <navigationItem key="navigationItem" title="LGSideMenuController" id="jua-jC-TbI">
                         <barButtonItem key="leftBarButtonItem" title="Left" id="OF7-o4-Bd7">
                             <connections>
-                                <action selector="openLeftView:" destination="wBU-AO-3fi" id="zUX-da-qNA"/>
+                                <action selector="openLeftView:" destination="wBU-AO-3fi" id="Soh-iA-dnE"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Right" id="Muv-7A-abZ">
                             <connections>
-                                <action selector="openRightView:" destination="wBU-AO-3fi" id="5IS-R9-Bfv"/>
+                                <action selector="openRightView:" destination="wBU-AO-3fi" id="LSk-Ka-4Zc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -200,6 +200,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="image3.png" width="1024" height="1024"/>
+        <image name="image3" width="1024" height="1024"/>
     </resources>
 </document>
