--- a/Demo_Swift_Storyboard/LGSideMenuControllerDemo/Main.storyboard
+++ b/Demo_Swift_Storyboard/LGSideMenuControllerDemo/Main.storyboard
@@ -102,7 +102,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image3" translatesAutoresizingMaskIntoConstraints="NO" id="q0I-ee-Mqw">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image3.png" translatesAutoresizingMaskIntoConstraints="NO" id="q0I-ee-Mqw">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EaT-dr-Flg">
@@ -199,6 +199,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="image3" width="1024" height="1024"/>
+        <image name="image3.png" width="1024" height="1024"/>
     </resources>
 </document>
